--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,1 +1,12 @@
-<p>quote works!</p>
+<div class="container overlay">
+  <h1> {{ title | titlecase}}</h1>
+  <div class="all-cards">
+    <div *ngFor="let quote of quotes" class="card" style="width: 21rem;">
+      <div class="card-body">
+        <h4 class="card-title">{{quote.title}}</h4>
+        <p class="card-text">{{quote.quote}}</p>
+      </div>
+    
+    </div>
+  </div>
+</div>
