--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -5,6 +5,9 @@
       <div class="card-body">
         <h4 class="card-title">{{quote.title}}</h4>
         <p class="card-text">{{quote.quote}}</p>
+        <h6 class="card-subtitle mb-2 text-muted"> - {{quote.author}}</h6>
+        <span class="card-subtitle mb-2">Posted by: <span id="name">{{quote.name}}</span></span>
+        <button class="btn btn-info btn-sm" id="quotes-button">See Quote</button>
       </div>
     
     </div>
