--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,4 +1,4 @@
-<div class="container overlay">
+<div class="container overlay" style="text-align: center;">
   <h1> {{ title | titlecase}}</h1>
   <div class="all-cards">
     <div *ngFor="let quote of quotes" class="card" style="width: 21rem;">
