--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -1,5 +1,5 @@
 h1{
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Oxygen', sans-serif;
   color: white;
   text-align: center;
   font-weight: bolder;
@@ -7,7 +7,7 @@ h1{
   padding-top: 2%;
 }
 #name{
-  color: rgb(109, 221, 81);
+  color: rgb(212, 65, 89);
 }
 .all-cards{
   display: flex;
@@ -19,6 +19,6 @@ h1{
 }
 .card{
   margin-bottom: 2%;
-  background-color: grey;
+  background-color: white;
   box-shadow: 5px 10px;
 }
