--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -6,6 +6,7 @@
         <h4 class="card-title">{{quote.title}}</h4>
         <p class="card-text">{{quote.quote}}</p>
         <h6 class="card-subtitle mb-2 text-muted"> - {{quote.author}}</h6>
+        <app-quote-detail bind-quoty="quote"></app-quote-detail>
         <span class="card-subtitle mb-2">Posted by: <span id="name">{{quote.name}}</span></span>
         <button class="btn btn-info btn-sm" id="quotes-button">See Quote</button>
       </div>
