--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -1,6 +1,6 @@
 h1{
   font-family: 'Oxygen', sans-serif;
-  color: white;
+  color: black;
   text-align: center;
   font-weight: bolder;
   padding-bottom: 2%;
