--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -10,7 +10,7 @@
         <span class="card-subtitle mb-2">Posted by: <span id="name">{{quote.name}}</span></span>
         <button class="btn btn-info btn-sm" id="quotes-button">See Quote</button> -->
         <app-quote-detail *ngIf="quote.showInfo" [quoty]="quote"></app-quote-detail>
-        <button (click)="toggle(i)"></button>
+        <button (click)="toggle(i)"> See More</button>
       </div>
     
     </div>
