--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -22,3 +22,8 @@ h1{
   background-color: white;
   box-shadow: 5px 10px;
 }
+.card-title{
+  font-size: larger;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: italic;
+}
