--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -9,7 +9,7 @@
         <!-- <app-quote-detail bind-quoty="quote"></app-quote-detail>
         <span class="card-subtitle mb-2">Posted by: <span id="name">{{quote.name}}</span></span>
         <button class="btn btn-info btn-sm" id="quotes-button">See Quote</button> -->
-        <app-quote-detail *ngIf="quote.showInfo" [quoty]="quote"></app-quote-detail>
+        <app-quote-detail *ngIf="quote.showInfo" [quoty]="quote" (isRead)="quoteDelete($event,i)"></app-quote-detail>
         <span class="card-subtittle mb-2">Posted by:<span id="name">{{quote.name}}</span></span>
         <button (click)="toggle(i)" class="btn btn-success"> See More</button>
       </div>
