--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,5 +1,5 @@
 <p class="card-text" id="param">{{quoty.quote}}</p>
-<h6 class="card-subtitle mb-2 text"> - {{quoty.author}} <span id="when">Posted: {{quoty.datePosted|date}} days ago.</span></h6>
+<h6 class="card-subtitle mb-2 text"> - {{quoty.author}} </h6>
 <div class="container-fluid" id="buttons">
   <button class="btn btn-sm hate" id="hate"><i class="fa-solid fa-thumbs-up" id="like"></i>Like</button>
   <button class="btn btn-sm hate" id="del"><i class="fa-solid fa-thumbs-down" id="dislike"></i>Dislike</button>
