--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -3,15 +3,11 @@
   <div class="all-cards">
     <div *ngFor="let quote of quotes;let i = index" class="card" style="width: 21rem;">
       <div class="card-body">
-        <h4 class="card-title">{{quote.title}}  <button (click)="toggle(i)" class="btn btn-success"> See More</button></h4>
-        <!-- <p class="card-text">{{quote.quote}}</p>
-        <h6 class="card-subtitle mb-2 text-muted"> - {{quote.author}}</h6> -->
-        <!-- <app-quote-detail bind-quoty="quote"></app-quote-detail>
-        <span class="card-subtitle mb-2">Posted by: <span id="name">{{quote.name}}</span></span>
-        <button class="btn btn-info btn-sm" id="quotes-button">See Quote</button> -->
+        <h4 class="card-title">{{quote.title}}</h4>
         <app-quote-detail *ngIf="quote.showInfo" [quoty]="quote" (isRead)="quoteDelete($event,i)"></app-quote-detail>
         <span class="card-subtittle mb-2">Posted by:<span id="name">{{quote.name}}</span><span id="date">  on: <span id="datecolor">{{quote.datePosted|date}}</span></span></span>
-        <!-- <button (click)="toggle(i)" class="btn btn-success"> See More</button> -->
+        <button (click)="toggle(i)" class="btn btn-success"> See More</button>
+        
       </div>
     
     </div>
