--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -2,7 +2,7 @@
 <h6 class="card-subtitle mb-2 text"> - {{quoty.author}}</h6>
 <p>Posted: {{quoty.datePosted|dateCount}} days ago.</p>
 <div class="container-fluid" id="buttons">
-  <button class="btn btn-sm hate" id="hate">{{quoty.likes}} Likes</button>
-  <button class="btn btn-sm hate" id="del">{{quoty.dislikes}} Dislikes</button>
+  <button class="btn btn-sm hate" id="hate" (click)="upvote('')">{{quoty.likes}} Likes</button>
+  <button class="btn btn-sm hate" id="del" (click)="downvote('')">{{quoty.dislikes}} Dislikes</button>
   <button class="btn btn-md btn-danger" id="del" (click)="deleteQuote(true)">Delete</button>
   </div>
