--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -1,8 +1,8 @@
 h1{
-  font-family: 'Oxygen', sans-serif;
+  font-family: cursive;
   color: black;
   text-align: center;
-  font-weight: bolder;
+  font-weight: bold;
   padding-bottom: 2%;
   padding-top: 2%;
 }
@@ -25,8 +25,9 @@ span{
 }
 .card{
   margin-bottom: 2%;
-  background-color: white;
+  background-image: url("src/assets/bg1.jpg");
   box-shadow: 5px 10px;
+  color: white;
 }
 .card-title{
   font-size: larger;
