--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,4 +1,4 @@
-<p class="card-text" id="param">{{quoty.quote}}</p>
+<p class="card-text" id="param">{{quoty.title}}</p>
 <h6 class="card-subtitle mb-2 text"> - {{quoty.author}}</h6>
 <p>Posted: {{quoty.datePosted|dateCount}} days ago.</p>
 <div class="container-fluid" id="buttons">
