added form blue print and display in parent component

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,5 +1,14 @@
 <div class="container overlay" style="text-align: center;">
   <h1> {{ title | titlecase}}</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-2"></div>
+      <div class="col-sm-8">
+        <app-quote-form></app-quote-form>
+      </div>
+    </div>
+  </div>
+
   <div class="all-cards">
     <div *ngFor="let quote of quotes;let i = index" class="card" style="width: 24rem;">
       <div class="card-body">
@@ -8,9 +17,8 @@
         <app-quote-detail *ngIf="quote.showInfo" [quoty]="quote" (isRead)="quoteDelete($event,i)"></app-quote-detail>
         <span class="card-subtittle mb-2">Posted by:<span id="name">{{quote.name}}</span><span id="date">  on: <span id="datecolor">{{quote.datePosted|date}}</span></span></span>
         <button (click)="toggle(i)" class="btn btn-success"> See More </button>
-        
       </div>
-    
     </div>
   </div>
+
 </div>
