--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,1 +1,24 @@
-<p>quote-form works!</p>
+<div class="container-fluid">
+  <h2 class="text-center">Add Your Own Quote</h2>
+  <hr>
+  <form>
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input type="text" required class="form-control" id="name">
+    </div>
+    <div class="form-group">
+      <label for="name">Quote Title</label>
+      <input type="text" required class="form-control" id="name">
+    </div>
+    <div class="form-group">
+      <label for="description">Quote</label>
+      <textarea class="form-control" id="quote" row="4" required></textarea>
+    </div>
+    <div class="form-group">
+      <label for="name">Author Name</label>
+      <input type="text" required class="form-control" id="name">
+    </div>
+    <button class="btn btn-sm btn-success">Add Quote</button>
+
+  </form>
+</div>
