--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,22 +1,42 @@
 <div class="container-fluid">
-  <h2 class="text-center">Add Your Own Quote</h2>
+  <h2 class="heading">Add Your Own Quote</h2>
   <hr>
-  <form>
+  <form #quoteForm="ngForm">
     <div class="form-group">
       <label for="name">Name</label>
-      <input type="text" required class="form-control" id="name">
+      <input type="text" required class="form-control" id="name" [(ngModel)]="newQuote.name" name="name" #name="ngModel">
+      <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+        <p>Name is required</p>
+        </div>
     </div>
     <div class="form-group">
       <label for="name">Quote Title</label>
-      <input type="text" required class="form-control" id="name">
+      <input type="text" required class="form-control" id="name" [(ngModel)]="newQuote.title" name="title" #title="ngModel">
+      <div [hidden]="title.valid || title.pristine" class="alert alert-danger">
+        <p>Title is required</p>
+        </div>
     </div>
     <div class="form-group">
       <label for="description">Quote</label>
-      <textarea class="form-control" id="quote" row="4" required></textarea>
+      <textarea class="form-control" id="quote" row="4" [(ngModel)]="newQuote.quote" name="quote" #quote="ngModel" required></textarea>
+      <div [hidden]="quote.valid || quote.pristine" class="alert alert-danger">
+        <p>Description is required</p>
+        </div>
     </div>
     <div class="form-group">
       <label for="name">Author Name</label>
-      <input type="text" required class="form-control" id="name">
+      <input type="text" required class="form-control" id="name" [(ngModel)]="newQuote.name" name="author" #author="ngModel">
+      <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+        <p>Author's name is required</p>
+        </div>
+    </div>
+
+    <div class="form-group">
+      <label for="date">Time</label>
+      <input type="date" id="time" [(ngModel)]="newQuote.datePosted" name="datePosted" #datePosted="ngModel"  required>
+      <div [hidden]="datePosted.valid || datePosted.pristine" class="alert alert-danger">
+        <p>Date is required</p>
+        </div>
     </div>
     <button class="btn btn-sm btn-success">Add Quote</button>
 
