--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <h2 class="heading">Add Your Own Quote</h2>
   <hr>
-  <form #quoteForm="ngForm">
+  <form (ngSubmit)="submitQuote()" #quoteForm="ngForm">
     <div class="form-group">
       <label for="name">Name</label>
       <input type="text" required class="form-control" id="name" [(ngModel)]="newQuote.name" name="name" #name="ngModel">
@@ -18,7 +18,7 @@
     </div>
     <div class="form-group">
       <label for="description">Quote</label>
-      <textarea class="form-control" id="quote" row="4" [(ngModel)]="newQuote.quote" name="quote" #quote="ngModel" required></textarea>
+      <textarea class="form-control" id="quote" row="3" [(ngModel)]="newQuote.quote" name="quote" #quote="ngModel" required></textarea>
       <div [hidden]="quote.valid || quote.pristine" class="alert alert-danger">
         <p>Description is required</p>
         </div>
