--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -2,9 +2,8 @@
   <h1> {{ title | titlecase}}</h1>
   <div class="container">
     <div class="row">
-      <div class="col-sm-2"></div>
-      <div class="col-sm-8">
-        <app-quote-form></app-quote-form>
+      <div class="col-md-6">
+        <app-quote-form (addQuote)="addNewQuote($event)"></app-quote-form>
       </div>
     </div>
   </div>
