--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -38,7 +38,7 @@
         <p>Date is required</p>
         </div>
     </div>
-    <button class="btn btn-sm btn-success">Add Quote</button>
+    <button type="submit" class="btn btn-sm btn-success">Add Quote</button>
 
   </form>
 </div>
