--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,24 +1,59 @@
-<div class="container overlay" style="text-align: center;">
-  <h1> {{ title | titlecase}}</h1>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <app-quote-form (addQuote)="addNewQuote($event)"></app-quote-form>
-      </div>
+<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+  <div class="container" style="text-align: center;">
+    <a href="#" class="navbar-brand">Wise Words</a>
+     
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a href="#quotes" class="nav-link">Quotes</a>
+          </li>
+          <li class="nav-item">
+            <a href="#form" class="nav-link">Form</a>
+            </li>
+            <li class="nav-item">
+              <a href="#footer" class="nav-link">Footer</a>
+              </li>    
+      </ul>
+    </div>  
     </div>
-  </div>
-<div class="col-md-12">
-  <div class="all-cards">
-    <div *ngFor="let quote of quotes;let i = index" class="card" style="width: 24rem;">
-      <div class="card-body">
-        <h3 class="card-text" id="param" >{{quote.quote}}</h3>
-        <h4 class="card-title" appHighlightQuote>{{quote.title}}</h4>
-        <app-quote-detail *ngIf="quote.showInfo" [quoty]="quote" (isRead)="quoteDelete($event,i)"></app-quote-detail>
-        <span class="card-subtittle mb-2">Posted by:<span id="name">{{quote.name}}</span><span id="date">  on: <span id="datecolor">{{quote.datePosted|date}}</span></span></span>
-        <button (click)="toggle(i)" class="btn btn-success"> See More </button>
-      </div>
-    </div>
-  </div>
-  </div>
+  </nav>
 
-</div>
+  <section class=" bg-light text-light text-center text-sm-smart p-3">
+  <div class="container">
+    <div class="row text-center g-4">
+    <div class="all-cards">
+      <div *ngFor="let quote of quotes;let i = index" class="card" style="width: 24rem;">
+        <div class="card-body">
+          <h3 class="card-text" id="param" >{{quote.quote}}</h3>
+          <h4 class="card-title" appHighlightQuote>{{quote.title}}</h4>
+          <app-quote-detail *ngIf="quote.showInfo" [quoty]="quote" (isRead)="quoteDelete($event,i)"></app-quote-detail>
+          <span class="card-subtittle mb-2">Posted by:<span id="name">{{quote.name}}</span><span id="date">  on: <span id="datecolor">{{quote.datePosted|date}}</span></span></span>
+          <button (click)="toggle(i)" class="btn btn-success"> See More </button>
+        </div>
+      </div>
+    </div>
+      </div>
+    </div>
+    </section>
+
+    <section class="bg-light text-light p-5 text-center text-sm-start">
+      <div class="container">
+        <div class="row">
+          <div class="d- sm-flex ">
+            <app-quote-form (addQuote)="addNewQuote($event)"></app-quote-form>
+          </div>
+        </div>
+      </div>
+      </section>
+
+      <footer class="p-5 bg-dark text-white text-center position-relative">
+        <div class="container">
+          <p class="lead">Copyright &copy; 20221 Wise Words</p>
+        </div>
+        </footer>
+
+
+
+
+   
+      
