--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -25,8 +25,8 @@
     </div>
     <div class="form-group">
       <label for="name">Author Name</label>
-      <input type="text" required class="form-control" id="name" [(ngModel)]="newQuote.name" name="author" #author="ngModel">
-      <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+      <input type="text" required class="form-control" id="name" [(ngModel)]="newQuote.author" name="author" #author="ngModel">
+      <div [hidden]="author.valid || author.pristine" class="alert alert-danger">
         <p>Author's name is required</p>
         </div>
     </div>
