--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
   <div class="container" style="text-align: center;">
     <a href="#" class="navbar-brand">Wise Words</a>
-     
-    <div class="collapse navbar-collapse">
+    
+    <div class="collapse navbar-collapse" id="navmenu">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
           <a href="#quotes" class="nav-link">Quotes</a>
@@ -15,11 +15,11 @@
               </li>    
       </ul>
     </div>  
-    </div>
+  </div> 
   </nav>
 
   <section class=" bg-light text-light text-center text-sm-smart p-3">
-  <div class="container">
+  <div class="container" id="quotes">
     <div class="row text-center g-4">
     <div class="all-cards">
       <div *ngFor="let quote of quotes;let i = index" class="card" style="width: 24rem;">
@@ -37,7 +37,7 @@
     </section>
 
     <section class="bg-light text-light p-5 text-center text-sm-start">
-      <div class="container">
+      <div class="container" id="form">
         <div class="row">
           <div class="d- sm-flex ">
             <app-quote-form (addQuote)="addNewQuote($event)"></app-quote-form>
@@ -47,7 +47,7 @@
       </section>
 
       <footer class="p-5 bg-dark text-white text-center position-relative">
-        <div class="container">
+        <div class="container" id="footer">
           <p class="lead">Copyright &copy; 20221 Wise Words</p>
         </div>
         </footer>
