--- a/src/app/quote-detail/quote-detail.component.css
+++ b/src/app/quote-detail/quote-detail.component.css
@@ -24,5 +24,5 @@ hr{
 }
 #when{
   float: right;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: Arial, Helvetica, sans-serif;
 }
