--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -1,5 +1,11 @@
+.navbar-brand{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: x-large;
+  font-weight: bold;
+
+}
 span{
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 #name{
   color: rgb(212, 65, 89);
